Moved some config values to properties file.